--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <h2>About Me</h2>
-    <img src="file:///F:/NaverCloud/005_web/1.jpg" width="50%">
+    <img src="./1.jpg" width="50%">
 
 </body>
 
