--- a/css.html
+++ b/css.html
@@ -1,9 +1,15 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
     <title>Welcome WEB1 - CSS</title>
     <meta charset="utf-8">
+    <style>
+        a {
+            color : red;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -16,6 +22,18 @@
 
 
     <h2>CSS</h2>
+
+    <!--
+    <h1><a href="index.html">WEB</a></h1>
+    <ol>
+        <li><a href="html.html">HTML</a></li>
+        <li><a href="css.html">CSS</a></li>
+        <li><a href="javascript.html">JavaScript</a></li>
+    </ol>
+
+
+    <h2>CSS</h2>
+    -->
 
 </body>
 
