--- a/css.html
+++ b/css.html
@@ -6,19 +6,22 @@
     <meta charset="utf-8">
     <style>
         a { 
-            color : red;
+            color : black;
             text-decoration: none;
         }
         h1{
             font-size: 45px;
             text-align: center;
+            border-bottom: 1px solid gray;
         }
+        /*
         #active {
             color: red;
         }
-        .saw {
+        .saw { 
             color: gray;
         }
+        */
     </style>
 
 </head>
@@ -27,7 +30,7 @@
     <h1><a href="index.html">WEB</a></h1>
     <ol>
         <li><a href="html.html" class="saw">HTML</a></li>
-        <li><a href="css.html" class="saw active">CSS</a></li>
+        <li><a href="css.html" class="saw" id=  "active">CSS</a></li>
         <li><a href="javascript.html">JavaScript</a></li>
     </ol>
 
