--- a/css.html
+++ b/css.html
@@ -5,6 +5,9 @@
     <title>Welcome WEB1 - CSS</title>
     <meta charset="utf-8">
     <style>
+        body{
+            margin:0;  
+        }
         #active {
             color: red;
         }
@@ -19,10 +22,18 @@
             font-size: 45px;
             text-align: center;
             border-bottom: 1px solid gray;
+            margin: 0;
+            padding: 20px;
         }
         /*
 
         */
+        o1{
+            border-right:1px solid gray;   
+            width: 100px;
+            maring: 0;
+            padding:20px;
+        }
     </style>
 
 </head>
