--- a/css.html
+++ b/css.html
@@ -25,6 +25,7 @@
             margin: 0;
             padding:20px;
         }
+        @media(min-width: 500px){
         #grid{
             display: gird;
             grid-template-columns: 150px 1fr;
@@ -34,6 +35,7 @@
         }
         #grid #article{
             padding: 25px;
+        }
         }
     </style>
 
