--- a/html.html
+++ b/html.html
@@ -4,6 +4,9 @@
 <head>
     <title>Welcome WEB1 - Html</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./css/style.css">
+
+    <script src="./javascript/colors.js"> </script>
 </head>
 
 <body>
