--- a/css.html
+++ b/css.html
@@ -4,41 +4,9 @@
 <head>
     <title>Welcome WEB1 - CSS</title>
     <meta charset="utf-8">
-    <style>
-        body{
-            margin:0;  
-        }
-        a { 
-            color : black;
-            text-decoration: none;
-        }
-        h1{
-            font-size: 45px;
-            text-align: center;
-            border-bottom: 1px solid gray;
-            margin: 0;
-            padding: 20px;
-        }
-        ol{
-            border-right:1px solid gray;   
-            width: 100px;
-            margin: 0;
-            padding:20px;
-        }
-        @media(min-width: 500px){
-        #grid{
-            display: gird;
-            grid-template-columns: 150px 1fr;
-        }
-        #grid ol{
-            padding-left: 25px;
-        }
-        #grid #article{
-            padding: 25px;
-        }
-        }
-    </style>
+    <link rel="stylesheet" href="./css/style.css">
 
+    <script src="./javascript/colors.js">   </script>
 </head>
 
 <body>
