--- a/javascript.html
+++ b/javascript.html
@@ -4,19 +4,96 @@
 <head>
     <title>Welcome WEB1 - JavaScript</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./css/style.css">
+    <style>
+        /*
+        js 라고만 적으면, 테크를 뜻한다.
+        .js 라고 적어야 클래스라고 명시하는 것
+
+        <div> 테크는 <h1>, <h2> 테크처럼 화면 전체를 사용하기 때문에 줄바꿈이 된다.
+        반면, <span> 테크는 줄바꿈이 되지 않는다.
+
+        사용자가 포괄적으로 선택하고 싶은 것은 클래스 선택자를 이용하고,
+        예외처리를 하고 싶은 것은 ID선택자를 이용한다.
+
+        테그 선택자 < 
+        */
+        /* li{
+            color: sienna;
+        } */
+        .js{
+            font-weight: bold;
+            color: purple;
+        }
+        #first{
+            color: green;
+        }
+    </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./javascript/colors.js"></script>
+    <!-- <script>
+        var alist = document.querySelectorAll('a');
+        var i = 0;
+        while(i < alist.length){
+            alist[i].style.color = 'red';
+            console.log(alist[i]);
+            i = i + 1;
+        }
+    </script>     -->
 </head>
 
 <body>
     <h1><a href="index.html">WEB</a></h1>
+    <!-- <input type="button" value="night" onclick="
+                document.querySelector('body').style.backgroundColor='black';
+                document.querySelector('body').style.color = 'white';
+                ">
+    <input type="button" value="day" onclick="
+                document.querySelector('body').style.backgroundColor='white';
+                document.querySelector('body').style.color = 'black';
+                "> -->
+
+    <!-- /*
+        this는 이벤트가 소속된 테그를 가리키도록 약속되어 있다.
+        this 인자는 함수 안에서 self 매개변수로 받는다.
+    */ -->
+    <input id="night_day" type="button" value="night" onclick="
+        nightDayHandler(this);
+    ">
+
     <ol>
         <li><a href="html.html">HTML</a></li>
         <li><a href="css.html">CSS</a></li>
         <li><a href="javascript.html">JavaScript</a></li>
     </ol>
 
+    <!-- <h2 style="color: powderblue; background-color: coral;"> -->
+    <h2>JavaScript란 무엇인가</h2>
+    <p>
+        <span id="first" class="js">JavaScript</span> (/ˈdʒɑːvəˌskrɪpt/),[6] often abbreviated as JS, 
+        is a programming language that conforms to the ECMAScript specification.[7]
+        <span class="js">JavaScript</span> is high-level, often just-in-time compiled, and multi-paradigm.
+        It has curly-bracket syntax, dynamic typing, prototype-based object-orientation,
+        and first-class functions.
 
-    <h2>JavaScript</h2>
+        Alongside HTML and CSS, <span class="js">JavaScript</span> is one of the core technologies of the World Wide Web.[8]
+        <span class="js">JavaScript</span> enables interactive web pages and is an essential part of web applications.
+        The vast majority of websites use it for client-side page behavior,[9]
+        and all major web browsers have a dedicated <span class="js">JavaScript</span> engine to execute it.
+    </p>
 
+    <input type="button" value="night" onclick="
+        if(this.value ==='night'){
+            document.querySelector('body').style.backgroundColor='black';
+            document.querySelector('body').style.color = 'white';
+            this.value ='day'
+        }
+        else{
+            document.querySelector('body').style.backgroundColor='white';
+            document.querySelector('body').style.color = 'black';
+            this.value ='night'
+        }
+    ">
 </body>
 
 </html>
